--- a/index.html
+++ b/index.html
@@ -416,6 +416,47 @@
         <div></div>
     </div>
     <div class="container10">
+        <div>
+            <div>
+                <div>
+                    <div><img src="vectors/N-logo.svg"/></div>
+                    <div>NftX</div>
+                </div>
+                <div>
+                    <span>Nulla facillisi. vestibulum non est nisi. Donec eget</span><span>sodales nisi. Donec ut velit erat</span>
+                </div>
+                <div>
+                    <span>C 2022 All rights reserved</span>
+                </div>
+            </div>
+            <div>
+                <ul>
+                    <ol>Explore</ol>
+                    <ol>Feature</ol>
+                    <ol>Who to work</ol>
+                    <ol>Pricing</ol>
+                    <ol>Reviews</ol>
+                </ul>
+            </div>
+            <div> 
+                <ul>
+                    <ol>Privacy policy</ol>
+                    <ol>Legal</ol>
+                    <ol>Terms of service</ol>
+                    <ol>Help center</ol>
+                </ul>
+            </div>
+            <div>
+                <div><span>Social Media</span></div>
+                <div>
+                    <div><img src="vectors/instagram.svg" /></div>
+                    <div><img src="vectors/facebook.svg" /></div>
+                    <div><img src="vectors/youtube.svg" /></div>
+
+                </div>
+            </div>
+
+        </div>
 
     </div>
     <script src="index.js"></script>
