add header logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container1">
         <div class="innerdiv1">
             <div class="logo">
-                <div><span>N</span></div>
+                <div><img src="vectors/headerlogo.svg"/></div>
                 <div><span>NftX</span></div>
             </div>
         <div class="list">
