--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Sass Product</title>
     <link rel="stylesheet" href="index.css"/>
     <link rel="icon" href="images/Dashboard2.jpeg" type="image/x-icon">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link href="https://fonts.googleapis.com/css2?family=Anybody:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
