made website responsive

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <span>start free 14 trial</span>
             <img src="vectors/rightarrow.svg"/>
         </div>
+        <div class="menu">
+            <img src="vectors/menubar.svg" />
+
+        </div>
         </div>
         <div class="innerdiv2">
             <span>Using basic skills you can improve your business stuff with Around</span>
